--- a/source/Controls/PluginCompact.xaml
+++ b/source/Controls/PluginCompact.xaml
@@ -6,10 +6,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:local="clr-namespace:SuccessStory.Controls"
-        xmlns:converters="clr-namespace:CommonPluginsPlaynite.Converters"
-        xmlns:commonpluginsshared="clr-namespace:CommonPluginsShared"
-        xmlns:customs="clr-namespace:SuccessStory.Controls.Customs"
         xmlns:convertersshared="clr-namespace:CommonPluginsShared.Converters"
+        xmlns:converters="clr-namespace:CommonPlayniteShared.Converters"
         mc:Ignorable="d" d:DesignHeight="100" d:DesignWidth="100"
         MaxHeight="{Binding RelativeSource={RelativeSource AncestorType=ContentControl}, Path=MaxHeight}">
 
