--- a/source/Controls/PluginButton.xaml
+++ b/source/Controls/PluginButton.xaml
@@ -6,8 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:local="clr-namespace:SuccessStory.Controls"
-        xmlns:converters="clr-namespace:CommonPluginsPlaynite.Converters"
-        xmlns:commonpluginsshared="clr-namespace:CommonPluginsShared"
+        xmlns:converters="clr-namespace:CommonPlayniteShared.Converters"
         xmlns:convertersshared="clr-namespace:CommonPluginsShared.Converters"
         mc:Ignorable="d" d:DesignHeight="40" d:DesignWidth="150">
 
