--- a/source/Controls/PluginViewItem.xaml
+++ b/source/Controls/PluginViewItem.xaml
@@ -4,8 +4,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-        xmlns:converters="clr-namespace:CommonPluginsPlaynite.Converters"
         xmlns:local="clr-namespace:SuccessStory.Controls"
+        xmlns:converters="clr-namespace:CommonPlayniteShared.Converters"
         mc:Ignorable="d" 
         d:DataContext="{d:DesignInstance Type=local:PluginViewItemDataContext, IsDesignTimeCreatable=True}">
 
