Fix comment and string typo for "rarity"
Leaves filenames and class/methods with "rarety" alone for now.

--- a/source/Localization/no_NO.xaml
+++ b/source/Localization/no_NO.xaml
@@ -170,7 +170,7 @@ Especially useful for Xbox achievements with their larges images which are reduc
     <sys:String x:Key="LOCSuccessStoryGameInformation">Information</sys:String>
 
 
-    <sys:String x:Key="LOCSuccessStoryRarety">Rarety</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRarety">Rarity</sys:String>
 
     <!-- ListViewGames -->
 
